common-applications/control/china-cid/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: china-cid-website
  name: china-cid-website
