common-applications/control/china-cid/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: china-cid-website-policy-01
  namespace: china-cid-website
spec:
  podSelector:
    matchLabels:
      app: china-cid-website
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - namespaceSelector:
            matchLabels:
              project: ingress-nginx
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
